--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tree_magic_mini = "3.2"
 copypasta = "0.10"
 libc = "0.2"
 unicode-width = "0.1"
+semver = "1.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
