--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ image = { version = "0.25", default-features = false, features = ["png", "jpeg",
 tempfile = "3.10"
 walkdir = "2.5"
 crossbeam-channel = "0.5"
+fuzzy-matcher = "0.3"
 hex = "0.4"
 tree_magic_mini = "3.2"
 libc = "0.2"
